--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "chai": "^4.1.0",
     "deep-freeze": "0.0.1",
     "prop-types": "^15.5.10",
