--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack-dev-server -d --config webpack.config.js --progress --colors",
-    "build": "webpack --config webpack.prod.config.js --progress --colors"
+    "build": "webpack --config webpack.prod.config.js --progress --colors",
+    "start": "node public/js/bundle.js"
   },
   "dependencies": {
     "axios": "^0.16.2",
