--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "webpack-dev-server -d --config webpack.config.js --progress --colors",
     "build": "webpack --config webpack.prod.config.js --progress --colors",
-    "start": "node public/js/bundle.js"
+    "start": "node public/index.html"
   },
   "dependencies": {
     "axios": "^0.16.2",
