--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "webpack-dev-server -d --config webpack.config.js --progress --colors",
     "build": "webpack --config webpack.prod.config.js --progress --colors",
-    "start": "node public/index.html"
+    "start": "node server/index.js"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -17,7 +17,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^3.3.7",
+    "cors": "^2.8.4",
     "css-loader": "^0.28.4",
+    "express": "^4.15.3",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
