--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack-dev-server -d --config webpack.config.js --progress --colors",
-    "build": "webpack --config webpack.prod.config.js --progress --colors",
-    "start": "node server/index.js",
-    "dev-server": "nodemon server/index.js"
+    "build": "webpack --config webpack.prod.config.js --progress --colors"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -17,11 +15,8 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
-    "cors": "^2.8.4",
     "css-loader": "^0.28.4",
-    "express": "^4.15.3",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -29,7 +24,6 @@
     "react-router": "2.8.1",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
-    "request": "^2.81.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.1.0"
